# collage

./: .gitignore  Makefile  README.md  app.py  launch.command  make_collages.py  pyproject.toml  requirements.txt
Collage.app/Contents/: Info.plist
Collage.app/Contents/MacOS/: make-collages-ui
Collage.app/Contents/Resources/: AppIcon.icns
collage/: __init__.py  cli.py  core.py  exif.py  image.py  layout.py  utils.py
make_collages.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
